[package]
name = "payment_system"
version = "0.1.0"
authors = ["wuhuarou <wobusbz2019@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.1",  features = [ "mysql", "runtime-actix-rustls"] }
dotenv = "0.15.0"
actix-web = "3"
async-trait = "0.1.50"
anyhow = "1.0"
structopt = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }